src/test/ui/argument-suggestions/swapped_arguments.stderr
error[E0059]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:8:3
   |
LL |   two_args(1.0, 1);
   |   ^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:3:4
   |
LL | fn two_args(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_args(1, 1.0);
   |   ^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:9:3
   |
LL |   three_args(1.0,   1,  "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:4:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_args(1, 1.0, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:10:3
   |
LL |   three_args(  1,  "", 1.0);
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:4:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_args(1, 1.0, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:11:3
   |
LL |   three_args( "", 1.0,   1);
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:4:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_args(1, 1.0, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:13:3
   |
LL |   four_args(1.0, 1, X {}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:5:4
   |
LL | fn four_args(_a: i32, _b: f32, _c: &str, _d: X) {}
   |    ^^^^^^^^^ -------  -------  --------  -----
help: make these changes
   |
LL |   four_args(1, 1.0, "", X {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0059`.
